# IINI4003---CPP-for-programmerere

Oving1/: a.out  oving1.cpp
Oving2/: oving2.cpp
Oving2_2/: CMakeLists.txt  main.cpp  Øving 2.docx
Oving3.xcodeproj/: project.pbxproj
Oving3.xcodeproj/project.xcworkspace/xcuserdata/ianevangelista.xcuserdatad/: UserInterfaceState.xcuserstate
Oving3.xcodeproj/xcshareddata/xcschemes/: Oving3.xcscheme
Oving3.xcodeproj/xcuserdata/ianevangelista.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Oving3.xcodeproj/xcuserdata/ianevangelista.xcuserdatad/xcschemes/: xcschememanagement.plist
Oving3/Oppgave1&2/Oppgave1&2/: circle.cpp  circle.hpp
Oving3/Oppgave1&2/Oppgave1&2.xcodeproj/: project.pbxproj
Oving3/Oppgave3/Oppgave3/: commodity.cpp  commodity.hpp
Oving3/Oppgave3/Oppgave3.xcodeproj/: project.pbxproj
Oving3/Oppgave4/Oppgave4/: main.cpp
Oving3/Oppgave4/Oppgave4.xcodeproj/: project.pbxproj
Oving3_2/Oppgave1/: CMakeLists.txt  circle.cpp  circle.hpp
Oving3_2/Oppgave3/: CMakeLists.txt  commodity.cpp  commodity.hpp
Oving3_2/Oppgave4/: CMakeLists.txt  main.cpp
Oving4/Oppgave1/Oppgave1/: main.cpp
Oving4/Oppgave1/Oppgave1.xcodeproj/: project.pbxproj
Oving4_2/Oppgave1/: main.cpp
Oving5/: CMakeLists.txt  main.cpp
Oving6/: CMakeLists.txt  main.cpp  server.cpp
Oving7/Oppgave1/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp
Oving7/Oppgave2/: CMakeLists.txt  Set.cpp  Set.hpp  main.cpp
Oving8/Oppgave1/: CMakeLists.txt  main.cpp
Oving8/Oppgave2/: CMakeLists.txt  main.cpp
(+11 files in other folders)
